# tidal_bot

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml
tidal_bot/: __main__.py  api.py  config.py  logger.py
tidal_bot/bot/: telegram.py
tidal_bot/rss/: rss.py
tidal_bot/spotify/: model.py  model.yaml  spotify.py
tidal_bot/tidal/: tidal.py
