[project]
name = "tidal-bot"
version = "0.1.0"
description = ""
authors = [
    {name = "Arthur Crepin Leblond",email = "arthur@marmottus.net"}
]
readme = "README.md"
requires-python = ">=3.13,<3.14"
dependencies = [
    "spotipy (>=2.25.2,<3.0.0)",
    "tidalapi (>=0.8,<0.9)",
	"python-telegram-bot (>=22.5,<23)",
]

[dependency-groups]
dev = [
    "ruff (>=0.14.7,<0.15.0)",
    "mypy (>=1.19.0,<2.0.0)",
    "rich (>=14,<15)",
    "datamodel-code-generator (==0.37.0)",
	"types-PyYAML (>=6,<7)"
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
cache-dir = ".cache/ruff"
line-length = 88
indent-width = 4
target-version = "py313"

[tool.ruff.lint]
# all rules are described here https://docs.astral.sh/ruff/rules/
select = [
    # Ruff
    "RUF",
	# isort
	"I",
	# pyflakes
	"F",
	# pycodestyle
	"E", "W",
	# pyupgrade
	"UP",
	# flake8-2020
	"YTT",
	# flake8-bandit
	"S",
	# flake8-bugbear
	"B",
	# flake8-comprehensions
	"C4",
	# flake8-future-annotations
	"FA",
	# flake8-implicit-str-concat
	"ISC",
	# flake8-import-conventions
	"ICN",
	# flake8-logging-format
	"G",
	# flake8-no-pep420
	"INP",
	# flake8-pie
	"PIE",
	# flake8-print
	"T20",
	# flake8-pyi
	"PYI",
	# flake8-pytest-style
	"PT",
	# flake8-quotes
	"Q",
	# flake8-raise
	"RSE",
	# flake8-return
	"RET",
	# flake8-self
	"SLF",
	# flake8-slots
	"SLOT",
	# flake8-tidy-imports
	"TID",
	# flake8-gettext
	"INT",
	# flynt
	"FLY",
	# Perflint
	"PERF",
]

ignore = [
	# line-too-long
	"E501",
	# ambiguous-variable-name
	"E741",
	# non-pep604-annotation	(Use X | Y for type annotations)
	"UP007",
	# unnecessary-assign
	"RET504",
	# single-line-implicit-string-concatenation
	"ISC001",
	# ambiguous-unicode-character-string
	"RUF001"
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.mypy]
plugins = [
    "pydantic.mypy"
]

exclude = [
]

cache_dir = ".cache/mypy"

follow_imports = "silent"
warn_redundant_casts = true
warn_unused_ignores = true
disallow_any_generics = true
no_implicit_reexport = true
disallow_untyped_defs = true

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true

[[tool.mypy.overrides]]
module = [
    "spotipy.*",
	"requests.*",
]

follow_untyped_imports = true
